Corrections in many places